--- a/www/css/print.css
+++ b/www/css/print.css
@@ -44,7 +44,7 @@ h4 { font-size:16px; color:#b10301; line-height:18px; }
 
 
 /* Header */
-#header .bg-bottom { padding:30px 20px 26px 33px; height:100%; }
+#header .bg-bottom { padding:20px 20px 26px 33px; height:100%; }
 
 
 /* Navigation */
@@ -196,7 +196,7 @@ h4 { font-size:16px; color:#b10301; line-height:18px; }
 
 .gallery ul li.last{margin-right:0;}
 
-#header, #navigation, #footer, #print_button {
+#header, #navigation, #footer, #print_button, #no_print {
     display:none;
 }
 body, #shell { 
