nobody read this

--- a/www/css/default.css
+++ b/www/css/default.css
@@ -1,3 +1,146 @@
+/* === gallery === */
+
+.gallery{
+	padding:20px 0 30px 0;
+	position:relative;
+	margin:0 auto 0;
+	display:block;
+	width:960px;
+	}
+
+.wrapper .gallery h2{
+	display:block;
+	text-align:left;
+	margin:0 0 20px 0;
+	padding:0;
+	color:#2C2C2C;
+	background-color:#444;
+	font-size:45px;
+	text-transform:uppercase;
+	line-height:normal;
+	}
+
+.gallery ul{
+	display:inline;
+	margin:0;
+	padding:0;
+	list-style:none;
+	}
+
+.gallery ul li{
+	display:block;
+	float:left;
+	margin:0 10px 10px 0;
+	}
+
+.gallery ul li img{
+	width:174px;
+	height:174px;
+	padding:4px;
+	border:1px solid #AAA;
+	}
+
+.gallery ul li.last{margin-right:0;}
+
+.gallery .delete, .gallery .move-right{ 
+	width:16px; 
+	height:16px;
+	padding:0;
+	border:0;
+	}
+
+/* === lightbox === */
+
+#jquery-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 90;
+	width: 100%;
+	height: 500px;
+}
+#jquery-lightbox {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 100;
+	text-align: center;
+	line-height: 0;
+}
+#jquery-lightbox a img { border: none; }
+#lightbox-container-image-box {
+	position: relative;
+	background-color: #fff;
+	width: 250px;
+	height: 250px;
+	margin: 0 auto;
+}
+#lightbox-container-image { padding: 10px; }
+#lightbox-loading {
+	position: absolute;
+	top: 40%;
+	left: 0%;
+	height: 25%;
+	width: 100%;
+	text-align: center;
+	line-height: 0;
+}
+#lightbox-nav {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	z-index: 10;
+}
+#lightbox-container-image-box > #lightbox-nav { left: 0; }
+#lightbox-nav a { outline: none;}
+#lightbox-nav-btnPrev, #lightbox-nav-btnNext {
+	width: 49%;
+	height: 100%;
+	zoom: 1;
+	display: block;
+}
+#lightbox-nav-btnPrev { 
+	left: 0; 
+	float: left;
+}
+#lightbox-nav-btnNext { 
+	right: 0; 
+	float: right;
+}
+#lightbox-container-image-data-box {
+	font: 10px Verdana, Helvetica, sans-serif;
+	background-color: #fff;
+	margin: 0 auto;
+	line-height: 1.4em;
+	overflow: auto;
+	width: 100%;
+	padding: 0 10px 0;
+}
+#lightbox-container-image-data {
+	padding: 0 10px; 
+	color: #666; 
+}
+#lightbox-container-image-data #lightbox-image-details { 
+	width: 70%; 
+	float: left; 
+	text-align: left; 
+}	
+#lightbox-image-details-caption { font-weight: bold; }
+#lightbox-image-details-currentNumber {
+	display: block; 
+	clear: left; 
+	padding-bottom: 1.0em;	
+}			
+#lightbox-secNav-btnClose {
+	width: 66px; 
+	float: right;
+	padding-bottom: 0.7em;	
+}
+
+/* === Icons === */
 [class^="icon-"],
 [class*=" icon-"] {
   display: inline-block;
