--- a/www/css/print.css
+++ b/www/css/print.css
@@ -1,6 +1,6 @@
 * { margin: 0; padding: 0; outline:0; }
 @font-face {
-  font-family: 'Neucha';
+  font-family: 'simpleness';
   font-style: normal;
   font-weight: normal;
   src: local('simpleness'), url('/fonts/simpleness.woff') format('woff');
