--- a/www/css/default_admin.css
+++ b/www/css/default_admin.css
@@ -1,4 +1,16 @@
-/* Drop Zone */
+/* === Editables === */
+.editable {
+    background: rgba(50, 50, 255, 0.03);
+    border: 1px dotted #BBB;
+    outline: 1px dotted #777;
+}
+.editable:hover {
+    background: rgba(50, 50, 255, 0.06);
+    border: 1px dotted #AAA;
+    outline: 0;
+}
+
+/* === DropBox Zone === */
 .dropZone {    
     color: #555;
     font-size: 14px;
