--- a/www/css/default.css
+++ b/www/css/default.css
@@ -1,3 +1,15 @@
+.x { clear: both; }
+
+#print_button{
+    float: right;
+}
+
+/* === news === */
+.news {  margin: 0 25px 25px 0; }
+.news h3 { padding: 0 5px 0 10px; }
+.news h4 { background: #f2f2f2; border-radius: 5px; padding: 4px 35px 0 10px; }
+.news p { margin-left: 20px; }
+
 /* === gallery === */
 
 .gallery{
