--- a/www/css/default_admin.css
+++ b/www/css/default_admin.css
@@ -40,3 +40,7 @@
     border-color: #0f0;
 }
 
+/* columns */
+.col {  float: left; width: 280px; margin: 0 25px 40px 0; display: inline; }
+.col a { margin-left: 15px; }
+.col b { background: #f2f2f2; border-radius: 5px; padding: 4px 35px 0 10px; }
