--- a/www/css/default.css
+++ b/www/css/default.css
@@ -8,6 +8,7 @@
 .news {  margin: 0 25px 25px 0; }
 .news h3 { padding: 0 5px 0 10px; }
 .news h4 { background: #f2f2f2; border-radius: 5px; padding: 4px 35px 0 10px; }
+.news h4 b { color: #555 }
 .news p { margin-left: 20px; }
 
 /* === gallery === */
