--- a/www/css/default.css
+++ b/www/css/default.css
@@ -161,7 +161,7 @@
   height: 14px;
   *margin-right: .3em;
   line-height: 14px;
-  vertical-align: text-top;
+  vertical-align: text-middle;
   background-image: url("/images/btn_all.png");
   background-position: 14px 14px;
   background-repeat: no-repeat; }
