--- a/www/css/style.css
+++ b/www/css/style.css
@@ -46,7 +46,7 @@ h4 { font-size:16px; color:#b10301; line-height:18px; }
 
 /* Header */
 #header .bg-bottom { padding:20px 20px 26px 33px; height:100%; }
-#header .bg-bottom-right { position:absolute; padding: 0px 10px 56px 743px; }
+#header .bg-bottom-right { position:absolute; margin:-50px; padding: 0px 10px 3px 643px; text-align:right; }
 #header h1 { color:#da0700; }
 
 /* Navigation */
