--- a/www/css/default.css
+++ b/www/css/default.css
@@ -8,18 +8,20 @@ figure { padding:0 20px 10px; float:left; }
 
 /* === news === */
 .news {  margin: 0 25px 25px 0; }
-.news h3 { padding: 0 5px 0 10px; }
 .news .date { background-color: rgba(0, 0, 0, 0.07); border-radius: 5px; }
-.news h4 { padding: 5px 35px 5px 10px; }
+.news h3 { padding: 0 5px 0 10px; }
+.news h4 { background: #d9c497; border-radius: 5px; padding: 4px 35px 5px 10px; }
 .news h4 b { color: #555 }
 .news p { margin-left: 20px; }
 
 /* === gallery === */
+
 .gallery{
 	padding:20px 0 30px 0;
 	position:relative;
 	margin:0 auto 0;
 	display:block;
+	width:960px;
 	}
 
 .wrapper .gallery h2{
@@ -27,6 +29,10 @@ figure { padding:0 20px 10px; float:left; }
 	text-align:left;
 	margin:0 0 20px 0;
 	padding:0;
+	color:#2C2C2C;
+	background-color:#444;
+	font-size:45px;
+	text-transform:uppercase;
 	line-height:normal;
 	}
 
@@ -43,7 +49,7 @@ figure { padding:0 20px 10px; float:left; }
 	margin:0 10px 10px 0;
 	}
 
-.gallery img{
+.gallery ul li img{
 	width:174px;
 	height:174px;
 	padding:4px;
@@ -149,6 +155,9 @@ figure { padding:0 20px 10px; float:left; }
 	float: right;
 	padding-bottom: 0.7em;	
 }
+
+/* === Cursors === */
+.cursor_pointer { cursor: pointer; }
 
 /* === Icons === */
 [class^="icon-"],
